alignment fixes

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -15,13 +15,13 @@
 }
 
 /* 
-*/
 * {
 	@apply border border-blue-500
 }
+*/
 
 body {
-	@apply bg-surface-default text-base leading-[1.4];
+	@apply bg-surface-default text-base leading-[1.5];
 	@apply text-text-primary;
 }
 
